--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
   "expo": {
-    "name": "Pickleball App",
+    "name": "Open Play",
     "slug": "pickleball-app",
     "description": "This is an app that manages courts to ensure all players get to play.",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "orientation": "portrait",
     "icon": "./assets/paddleicon.png",
     "userInterfaceStyle": "light",
